changes in index.html

--- a/static/assets/css/meyawo.css
+++ b/static/assets/css/meyawo.css
@@ -12244,11 +12244,10 @@ p {
 }
 
 .button-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
-
+  display: flex;
+  justify-content: space-evenly;
 }
+
 
 .service-card {
   position: relative;
