--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,9 @@
                     <a class="link" href="#about">About</a>
                 </li>
                 <li class="item">
+                    <a class="link" href="#resume">Resume</a>
+                </li>
+                <li class="item">
                     <a class="link" href="#works">Works</a>
                 </li>
                 <li class="item">
@@ -82,16 +85,30 @@
                     <p>
                         I believe one should always be lively in all phases of life. Life is all about facing new
                         challenges everyday. Main purpose is to face them with courage yet enjoying life to the fullest.
-                        <a href="static/assets/MYCV.pdf" download
-                            class="btn-rounded btn btn-outline-primary mt-4 mr-5">Download CV</a>
-                        <a href="https://github.com/Vernnit"
-                            class="btn-rounded btn btn-outline-primary float right mt-4 mr-5">Github</a>
-                        <a href="https://www.linkedin.com/in/vernnit-verma-0a64b1230"
-                            class="btn-rounded btn btn-outline-primary mt-4">Linkedin</a>
+                    <div class="button-container">
+                        <a href="static/assets/MYCV.pdf" download>
+                            <button class="btn-rounded btn btn-outline-primary mt-4 ">Download CV</button>
+                        </a>
+                        <a href="https://github.com/Vernnit">
+                            <button class="btn-rounded btn btn-outline-primary float right mt-4 ">Github</button></a>
+                        <a href="https://www.linkedin.com/in/vernnit-verma-0a64b1230">
+                            <button class="btn-rounded btn btn-outline-primary mt-4 ">Linkedin</button></a>
+                    </div>
                 </div>
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
     </section> <!-- end of about section -->
+
+    <!--Resume Section-->
+    <section class="section" id="resume">
+        <div class="container text-center">
+            <div class="resume">
+                <h2 class="section-title mb-3">My Resume</h2>
+                <embed src="static/assets/MYCV.pdf" width="800px" height="2100px" />
+            </div>
+        </div>
+    </section>
+    <!--End of Resume Section-->
 
     <!-- works section -->
     <section class="section" id="works">
