--- a/static/assets/css/meyawo.css
+++ b/static/assets/css/meyawo.css
@@ -13398,6 +13398,14 @@ div.page[data-size="A4"] {
   align-items: center;
 }
 
+.divtext {
+  font-size: 1.4vw;
+}
+
+.htext {
+  font-size: 2.3vw
+}
+
 .section .section-title {
   font-size: calc(20px + (35 - 20) * ((100vw - 300px) / (1300 - 300)));
 }
